--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "d:/Github DSA/Basic-cpp",
-      "program": "d:/Github DSA/Basic-cpp/build/Debug/outDebug",
+      "cwd": "d:/1_CP/Github DSA/Basic-cpp",
+      "program": "d:/1_CP/Github DSA/Basic-cpp/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
